# ltp4j

./: .gitmodules  CMakeLists.txt  README.md  build.xml  edu_hit_ir_ltp4j_Ner.h  edu_hit_ir_ltp4j_Postag.h  edu_hit_ir_ltp4j_Segment.h  edu_hit_ir_ltp4j_SplitSentence.h  edu_hit_ir_ltp4j_Srl.h  ner_jni.cpp  parser_jni.cpp  postag_jni.cpp  segment_jni.cpp  split_sentence_jni.cpp  srl_jni.cpp  string_to_jstring.hpp
doc/: ltp-native.md  ltp4j-document-1.0.md
examples/: Test.java
jni/: edu_hit_ir_ltp4j_NER.h  edu_hit_ir_ltp4j_Parser.h  edu_hit_ir_ltp4j_Postagger.h  edu_hit_ir_ltp4j_SRL.h  edu_hit_ir_ltp4j_Segmentor.h  ner_jni.cpp  parser_jni.cpp  postag_jni.cpp  segment_jni.cpp  split_sentence_jni.cpp  srl_jni.cpp
src/edu/hit/ir/ltp4j/: NER.java  NativeUtils.java  Ner.java  Pair.java  Parser.java  Postag.java  Postagger.java  SRL.java  Segment.java  Segmentor.java  SplitSentence.java  Srl.java
